Handle TooManyRequestsException. Cleanup code.