@@ -52,16 +52,18 @@ public class PlaylistService {
                     url, HttpMethod.GET, authEntity(accessToken), SpotifyPlaylistMeta.class);
 
             SpotifyPlaylistMeta body = response.getBody();
-            if (body == null || body.getName() == null) {
+            if (body == null || body.name() == null) {
                 throw new SpotifyApiException("Playlist not found");
             }
-            return body.getName();
+            return body.name();
         } catch (HttpClientErrorException.NotFound e) {
             log.error("Playlist not found: {}", playlistId, e);
             throw new SpotifyApiException("Playlist not found: " + playlistId);
         } catch (HttpClientErrorException.Unauthorized e) {
             log.error("Access token expired or invalid for playlist: {}", playlistId, e);
             throw new SpotifyApiException("Access token expired or invalid");
+        } catch (HttpClientErrorException.TooManyRequests e) {
+            throw e; // handled by GlobalExceptionHandler
         } catch (HttpClientErrorException e) {
             log.error("Failed to fetch playlist info for {}: {}", playlistId, e.getStatusCode(), e);
             throw new SpotifyApiException("Failed to fetch playlist info: " + e.getStatusCode());
@@ -82,52 +84,53 @@ public class PlaylistService {
                     url, HttpMethod.GET, authEntity(token), SpotifyPagingResponse.class);
 
             SpotifyPagingResponse page = response.getBody();
-            if (page == null || page.getItems() == null) {
+            if (page == null || page.items() == null) {
                 break;
             }
 
-            for (SpotifyPlaylistItem playlistItem : page.getItems()) {
+            for (SpotifyPlaylistItem playlistItem : page.items()) {
                 if (playlistItem.isLocal()) {
                     continue;
                 }
-                SpotifyTrack track = playlistItem.getItem();
-                if (track == null || !"track".equals(track.getType())) {
+                SpotifyTrack track = playlistItem.track();
+                if (track == null || !"track".equals(track.type())) {
                     continue;
                 }
 
                 allTracks.add(toTrackResponse(track));
             }
 
-            if (page.getNext() == null) {
+            if (page.next() == null) {
                 break;
             }
             offset += PAGE_LIMIT;
         }
 
+        log.info("Fetched {} tracks from playlist {}", allTracks.size(), playlistId);
         return allTracks;
     }
 
     private TrackResponse toTrackResponse(SpotifyTrack track) {
-        String artistNames = (track.getArtists() != null)
-                ? track.getArtists().stream().map(SpotifyArtist::getName).collect(Collectors.joining(", "))
+        String artistNames = (track.artists() != null)
+                ? track.artists().stream().map(SpotifyArtist::name).collect(Collectors.joining(", "))
                 : "";
 
-        String albumName = (track.getAlbum() != null) ? track.getAlbum().getName() : "";
+        String albumName = (track.album() != null) ? track.album().name() : "";
 
         String albumImageUrl = "";
-        if (track.getAlbum() != null && track.getAlbum().getImages() != null && !track.getAlbum().getImages().isEmpty()) {
-            albumImageUrl = track.getAlbum().getImages().get(0).getUrl();
+        if (track.album() != null && track.album().images() != null && !track.album().images().isEmpty()) {
+            albumImageUrl = track.album().images().getFirst().url();
         }
 
-        String previewUrl = (track.getPreviewUrl() != null) ? track.getPreviewUrl() : "";
+        String previewUrl = (track.previewUrl() != null) ? track.previewUrl() : "";
 
         String spotifyUrl = "";
-        if (track.getExternalUrls() != null) {
-            spotifyUrl = track.getExternalUrls().getOrDefault("spotify", "");
+        if (track.externalUrls() != null) {
+            spotifyUrl = track.externalUrls().getOrDefault("spotify", "");
         }
 
         return new TrackResponse(
-                track.getId(), track.getName(), artistNames, albumName,
+                track.id(), track.name(), artistNames, albumName,
                 albumImageUrl, previewUrl, spotifyUrl);
     }
 
@@ -137,136 +140,33 @@ public class PlaylistService {
         return new HttpEntity<>(headers);
     }
 
-    // --- Spotify API response DTOs (Jackson) ---
+    // --- Spotify API response DTOs ---
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyPlaylistMeta {
-        @JsonProperty
-        private String name;
-
-        public String getName() {
-            return name;
-        }
-    }
+    record SpotifyPlaylistMeta(String name) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyPagingResponse {
-        @JsonProperty
-        private List<SpotifyPlaylistItem> items;
-        @JsonProperty
-        private String next;
-        @JsonProperty
-        private int total;
-
-        public List<SpotifyPlaylistItem> getItems() {
-            return items;
-        }
-
-        public String getNext() {
-            return next;
-        }
-
-        public int getTotal() {
-            return total;
-        }
-    }
+    record SpotifyPagingResponse(List<SpotifyPlaylistItem> items, String next) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyPlaylistItem {
-        @JsonProperty("is_local")
-        private boolean isLocal;
-
-        @JsonProperty("item")
-        private SpotifyTrack item;
-
-        public boolean isLocal() {
-            return isLocal;
-        }
-
-        public SpotifyTrack getItem() {
-            return item;
-        }
-    }
+    record SpotifyPlaylistItem(@JsonProperty("is_local") boolean isLocal, @JsonProperty("item") SpotifyTrack track) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyTrack {
-        @JsonProperty
-        private String id;
-        @JsonProperty
-        private String name;
-        @JsonProperty
-        private String type;
-        @JsonProperty
-        private List<SpotifyArtist> artists;
-        @JsonProperty
-        private SpotifyAlbum album;
-        @JsonProperty("preview_url")
-        private String previewUrl;
-        @JsonProperty("external_urls")
-        private Map<String, String> externalUrls;
-
-        public String getId() {
-            return id;
-        }
-
-        public String getName() {
-            return name;
-        }
-
-        public String getType() {
-            return type;
-        }
-
-        public List<SpotifyArtist> getArtists() {
-            return artists;
-        }
-
-        public SpotifyAlbum getAlbum() {
-            return album;
-        }
-
-        public String getPreviewUrl() {
-            return previewUrl;
-        }
-
-        public Map<String, String> getExternalUrls() {
-            return externalUrls;
-        }
-    }
+    record SpotifyTrack(
+            String id,
+            String name,
+            String type,
+            List<SpotifyArtist> artists,
+            SpotifyAlbum album,
+            @JsonProperty("preview_url") String previewUrl,
+            @JsonProperty("external_urls") Map<String, String> externalUrls) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyArtist {
-        @JsonProperty
-        private String name;
-
-        public String getName() {
-            return name;
-        }
-    }
+    record SpotifyArtist(String name) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyAlbum {
-        @JsonProperty
-        private String name;
-        @JsonProperty
-        private List<SpotifyImage> images;
-
-        public String getName() {
-            return name;
-        }
-
-        public List<SpotifyImage> getImages() {
-            return images;
-        }
-    }
+    record SpotifyAlbum(String name, List<SpotifyImage> images) {}
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    static class SpotifyImage {
-        @JsonProperty
-        private String url;
-
-        public String getUrl() {
-            return url;
-        }
-    }
+    record SpotifyImage(String url) {}
 }
